nithing working but won't give up, either this way or another

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <div class="container">
         <div class="row">
             <div class="results__wrapper">
-                <h1 class="title">
+                <h1 class="title" id="title_movie">
                     Trending <span class="highlight__no--fade">Now:</span>
                 </h1>
             </div>
         </div>
     
  <div class="movie__container">
-    <div class="movie">
+    <div class="movie trending">
         <figure class="movie__cover--wrapper">
             <img class="movie__cover " src="assets/miles.jpg" alt="">
         </figure>
@@ -69,7 +69,7 @@
         <p class="movie__year">  June 03 2023 </p>
     </div>
 
-    <div class="movie">
+    <div class="movie trending">
             <figure class="movie__cover--wrapper">
                 <img class="movie__cover " src="assets/barb.jpg" alt="">
             </figure>
@@ -77,28 +77,28 @@
             <p class="movie__year">  July 21 2023 </p>
         </div>
 
-        <div class="movie">
+        <div class="movie trending">
             <figure class="movie__cover--wrapper">
                 <img class="movie__cover" src="assets/oppenheimer.jpeg" alt="">
             </figure>
             <h2 class="movie__title">Oppenheimer</h2>
             <p class="movie__year">  July 21 2023 </p>
         </div>
-        <div class="movie">
+        <div class="movie trending">
             <figure class="movie__cover--wrapper">
                 <img class="movie__cover" src="assets/transformers.jpg" alt="">
             </figure>
             <h2 class="movie__title">Transformers: Rise Of The Beast</h2>
             <p class="movie__year">  July 21 2023 </p>
         </div>
-        <div class="movie">
+        <div class="movie trending">
             <figure class="movie__cover--wrapper">
                 <img class="movie__cover" src="assets/gotg.jpg" alt="">
             </figure>
             <h2 class="movie__title">Gaurdians Of The Galaxy Vol 3</h2>
             <p class="movie__year">  July 21 2023 </p>
         </div>
-        <div class="movie">
+        <div class="movie trending">
             <figure class="movie__cover--wrapper">
                 <img class="movie__cover" src="assets/fast.jpg" alt="">
             </figure>
