--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
     <div class="row navbar__logo">
     <figure class="logo__picture--mask nav__logo">
-     <img src="./assets/movlogo.PNG" class="logo__picture">
+     <img src="./assets/movlogo.jpg" class="logo__picture">
     </figure>
     
 </div>
